feat(device) detect new brand FireFly Mobile models: AURII Passion, AURII Virtuoso, AURII Secret Lite, AURII Force, AURII Fusion, AURII F8 Premium, AURII xCite feat(device) detect brand Blaupunkt model: Atlantic 4G feat(device) detect brand Oysters model: Atlantis A10.G403
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2686,7 +2686,7 @@ BenQ:
 
 # Blaupunkt
 Blaupunkt:
-  regex: 'Blaupunkt|Atlantis[_ ](?:1001A|1010A|A10\.G402)|Discovery[_ ](?:111C|1000C|1001A?)|Endeavour[_ ](?:785|101[GLM]|1000|1001|101[03]|1100)|Polaris[_ ]803'
+  regex: 'Blaupunkt|Atlantis[_ ](?:1001A|1010A|A10\.G40[23])|Discovery[_ ](?:111C|1000C|1001A?)|Endeavour[_ ](?:785|101[GLM]|1000|1001|101[03]|1100)|Polaris[_ ]803
   device: 'tablet'
   models:
     - regex: 'Discovery[_ ]111C'
@@ -2701,7 +2701,7 @@ Blaupunkt:
       model: 'Endeavour $1'
     - regex: 'Polaris[_ ](803)'
       model: 'Polaris $1'
-    - regex: 'Atlantis[_ ](1001A|1010A|A10\.G402)'
+    - regex: 'Atlantis[_ ](1001A|1010A|A10\.G40[23])'
       model: 'Atlantis $1'
     - regex: 'Blaupunkt (SL 0[124]|SM 01)'
       device: 'smartphone'
@@ -9999,12 +9999,15 @@ Overmax:
 
 # Oysters
 Oysters:
-  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|T102MS_3G|T102ER3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_[34]G|IndianV|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G|T74Mai_3G'
+  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|T102MS_3G|T102ER3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_[34]G|IndianV|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G|T74Mai_3G|Atlantic4G'
   device: 'tablet'
   models:
     - regex: 'Pacific[ ]?800i'
       device: 'smartphone'
       model: 'Pacific 800i'
+    - regex: 'Atlantic4G'
+      device: 'smartphone'
+      model: 'Atlantic 4G'
     - regex: 'IndianV'
       device: 'smartphone'
       model: 'Indian V'
@@ -16540,3 +16543,17 @@ Aoson:
       model: 'S7 7.0"'
     - regex: 'aosonS8Pro[);/ ]'
       model: 'S8 Pro 8.0"'
+
+# FireFly Mobile
+FireFly Mobile:
+  regex: '(AURII[ _](?:Passion|Virtuoso|Secret Lite|FORCE|FUSION|F8[_ ]Premium|XCITE))[);/ ]'
+  device: 'smartphone'
+  models:
+    - regex: 'AURII[ _]FORCE[);/ ]'
+      model: 'AURII Force'
+    - regex: 'AURII[ _]FUSION[);/ ]'
+      model: 'AURII Fusion'
+    - regex: 'AURII[ _]XCITE[);/ ]'
+      model: 'AURII xCite'
+    - regex: '(AURII[ _](?:Passion|Virtuoso|Secret Lite|F8[_ ]Premium))[);/ ]'
+      model: '$1'
