--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3604,6 +3604,8 @@ CUBOT:
       model: 'Cheetah 2'
     - regex: 'RAINBOW 2'
       model: 'Rainbow 2'
+    - regex: 'RAINBOW'
+      model: 'Rainbow'
     - regex: 'DINOSAUR'
       model: 'Dinosaur'
     - regex: 'KINGKONG_MINI'
@@ -15303,7 +15305,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ]Power|Power Ice(?: Max)?|Easy_S_Pro|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo|Max)|PowerFour|BOOST II(?:se)?|FestXL|Tasty)[;)/ ]'
+  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ]Power|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo|Max)|PowerFour|BOOST II(?:se)?|FestXL|Tasty)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])[;)/ ]'
@@ -15322,8 +15324,10 @@ Highscreen:
       model: 'Pure Power'
     - regex: 'Razar_Pro[;)/ ]'
       model: 'Razar Pro'
-    - regex: 'Easy_S_Pro[;)/ ]'
-      model: 'Easy S Pro'
+    - regex: 'Easy[_ ]([SL]|XL)[_ ]Pro[;)/ ]'
+      model: 'Easy $1 Pro'
+    - regex: 'Easy[_ ]([SFL]|XL)[;)/ ]'
+      model: 'Easy $1'
     - regex: '(?:HIGHSCREEN )?Easy[- ]Power[- ]Pro[;)/ ]'
       model: 'Easy Power Pro'
     - regex: '(?:HIGHSCREEN )?Easy-Power[;)/ ]'
