--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7535,7 +7535,7 @@ Lenco:
 
 # lenovo
 Lenovo:
-  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|[67]01LV|Z2131|K350t|VIBE X2|K31-t3)[/;) ]'
+  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|[67]01LV|Z2131|K350t|VIBE X2|K31-t3|TAB 2 A8-50LC)[/;) ]'
   device: 'smartphone'
   models:
     - regex: 'Lenovo ?G780'
@@ -7567,6 +7567,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'TB3-710[IF]'
       model: 'TAB3 7 Essential'
+      device: 'tablet'
+    - regex: 'TAB 2 A8-50LC'
+      model: 'TAB2 A8-50LC'
       device: 'tablet'
     - regex: '(?:TB3-850[FM]|601LV)[/;) ]'
       model: 'TAB3 8'
@@ -9565,7 +9568,7 @@ Obi:
 
 # onda
 Onda:
-  regex: 'Onda|(?:(?:V820w|V891[w]?|V919(?: 3G)? Air)[ _-]DualOS|(?:V919 4G Air|V989 Air) Core8|T2101L2B1C| V10 4G)[);/ ]'
+  regex: 'Onda|(?:(?:V820w|V891[w]?|V919(?: 3G)? Air)[ _-]DualOS|(?:V919 4G Air|V989 Air) Core8|T2101L2B1C| V10 4G|OBOOK (?:20 SE|20 PLUS DUALOS)|OBOOK10 SE)[);/ ]'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -9598,6 +9601,15 @@ Onda:
       device: 'tablet'
     - regex: ' V10 4G[);/ ]'
       model: 'V10 10.1" 4G'
+      device: 'tablet'
+    - regex: 'OBOOK 20 SE[);/ ]'
+      model: 'oBook 20 SE'
+      device: 'tablet'
+    - regex: 'OBOOK 20 PLUS DUALOS[);/ ]'
+      model: 'oBook 20 Plus'
+      device: 'tablet'
+    - regex: 'OBOOK10 SE[);/ ]'
+      model: 'oBook 10 SE'
       device: 'tablet'
 
     - regex: '([a-z0-9]+)[ _]Onda'
@@ -10022,7 +10034,7 @@ Overmax:
 
 # Oysters
 Oysters:
-  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|T102MS_3G|T102ER3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_[34]G|IndianV|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G|T74Mai_3G|Atlantic4G'
+  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|T102MS_3G|T102ER3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_[34]G|IndianV|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G|T74Mai_3G|T104MBi_3G|T104SCi_3G|T104ER4G|Atlantic4G'
   device: 'tablet'
   models:
     - regex: 'Pacific[ ]?800i'
@@ -10039,7 +10051,7 @@ Oysters:
       model: '$1'
     - regex: '(T84ERI[ _]3G|T72HM(s_)?3G|(?:(T74HMi|T84Bi)[_ ]4G)|T84Ni[_ ][34]G)'
       model: '$1'
-    - regex: '(T74MR|T102MS|T104B|T74SC|T74[DN]|T72HA|T102ER)[ _]?([34]G)'
+    - regex: '(T74MR|T102MS|T104B|T74SC|T74[DN]|T72HA|T102ER|T104SCi|T104MBi|T104ER)[ _]?([34]G)'
       model: '$1 $2'
     - regex: 'T74Mai_3G'
       model: 'T74MAi 3G'
@@ -16607,3 +16619,8 @@ Time2:
  regex: '(TC1050G)[);/ ]'
  device: 'tablet'
  model: '$1 10.1"'
+
+Sunstech:
+  regex: '(TAB2323GMQC)[);/ ]'
+  device: 'tablet'
+  model: '$1'
