feat(device) detect brand Contixo models: GX-1035 4G 10.1", B105 3G 10.1", B108 4G 10.1", KT107 3G 10.1", KT715 3G 7.0", KT995 3G 10.1"
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16033,6 +16033,18 @@ Contixo:
   models:
     - regex: 'CX-1045 3G[);/ ]'
       model: 'CX-1045 3G'
+    - regex: 'CONTIXO GX 1035[);/ ]'
+      model: 'GX-1035 4G 10.1"'
+    - regex: 'B105[);/ ]'
+      model: 'B105 3G 10.1"'
+    - regex: 'B108[);/ ]'
+      model: 'B108 4G 10.1"'
+    - regex: 'KT107(?: 3G)?[);/ ]'
+      model: 'KT107 3G 10.1"'
+    - regex: 'KT715 3G[);/ ]'
+      model: 'KT715 3G 7.0"'
+    - regex: 'KT995[);/ ]'
+      model: 'KT995 3G 10.1"'
 
 # E-Ceros
 'E-Ceros':
