feat(device) detect brand Santin model: Dream Plus 03A feat(device) detect brand Onda model: V919 Air CH DualOs feat(device) detect brand Doogee model: Valencia2 Y100 Plus feat(device) rename model Valencia2 Y100pro => Valencia2 Y100 Pro feat(device) rename model oBook 20 Plus DualOS => oBook 20 Plus Dual OS fix(device) fix regex V919 Air Dual OS set correct model detect
issue #6355

--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -5554,7 +5554,7 @@
   device:
     type: smartphone
     brand: DO
-    model: Valencia2 Y100pro
+    model: Valencia2 Y100 Pro
   os_family: Android
   browser_family: Chrome
 - 
