--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -5393,7 +5393,7 @@
   device:
     type: tablet
     brand: OD
-    model: oBook 20 Plus
+    model: oBook 20 Plus Dual OS
   os_family: Android
   browser_family: Chrome
 -
@@ -5496,8 +5496,7 @@
     model: B105 3G 10.1"
   os_family: Android
   browser_family: Chrome
--
-  user_agent: Mozilla/5.0 (Linux; Android 6.0; CONTIXO B108) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Safari/537.36
+- user_agent: Mozilla/5.0 (Linux; Android 6.0; CONTIXO B108) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Safari/537.36
   os:
     name: Android
     short_name: AND
@@ -5514,7 +5513,7 @@
     type: tablet
     brand: 3C
     model: B108 4G 10.1"
-    os_family: Android
+  os_family: Android
   browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 6.0; CONTIXO KT107 3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Safari/537.36
@@ -5594,7 +5593,7 @@
     type: tablet
     brand: 3C
     model: KT715 3G 7.0"
-    os_family: Android
+  os_family: Android
   browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 6.0; CONTIXO KT995) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.73 Safari/537.36
@@ -5614,6 +5613,66 @@
     type: tablet
     brand: 3C
     model: KT995 3G 10.1"
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; DREAMPLUS03A) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.73 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 77.0.3865.73
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SQ
+    model: Dream Plus 03A
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; V919 Air CH DualOS) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.96 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 78.0.3904.96
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: OD
+    model: V919 Air CH Dual OS
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Valencia2_Y100_Plus) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.116 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 79.0.3945.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: DO
+    model: Valencia2 Y100 Plus
   os_family: Android
   browser_family: Chrome
 
