feat(device) detect new brand Dolamee model: D5, D6 feat(device) detect new brand Doopro model: P3 feat(device) detect new brand Invin model: X2, KM6 feat(device) detect new brand Tetratab model: Casebook 3 feat(device) detect brand Blaupunkt model: Discovery A10.302 feat(device) detect brand Leagoo models: M8 Pro, T1 feat(device) detect brand Santin model: Candy U7 Pro feat(device) detect brand Vertu model: Constellation X
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2689,11 +2689,13 @@ BenQ:
 
 # Blaupunkt
 Blaupunkt:
-  regex: 'Blaupunkt|Atlantis[_ ](?:1001A|1010A|A10\.G40[23])|Discovery[_ ](?:111C|1000C|1001A?)|Endeavour[_ ](?:785|101[GLM]|1000|1001|101[03]|1100)|Polaris[_ ]803'
+  regex: 'Blaupunkt|Atlantis[_ ](?:1001A|1010A|A10\.G40[23])|Discovery[_ ](?:A10_302|111C|1000C|1001A?)|Endeavour[_ ](?:785|101[GLM]|1000|1001|101[03]|1100)|Polaris[_ ]803'
   device: 'tablet'
   models:
     - regex: 'Discovery[_ ]111C'
       model: 'Discovery 111C'
+    - regex: 'Discovery[_ ]A10_302'
+      model: 'Discovery A10.302'
     - regex: 'Discovery[_ ]1000C'
       model: 'Discovery 1000C'
     - regex: 'Discovery[_ ]1001A'
@@ -7439,13 +7441,13 @@ LCT:
 
 # Leagoo
 Leagoo:
-  regex: 'LEAGOO|(?:M5 EDGE|KIICAA (POWER|MIX)|Leapad[ _]7s|Elite 1|Venture 1)[);/ ]'
+  regex: 'LEAGOO[ _-]?|(?:M5 EDGE|KIICAA (POWER|MIX)|Leapad[ _]7s|Elite 1|Venture 1)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'LEAGOO[- _](Z[156]|M8)[);/ ]'
-      model: '$1'
-    - regex: 'LEAGOO[- _]M8Pro[);/ ]'
+    - regex: 'LEAGOO[- _]M8[_-]?Pro[);/ ]'
       model: 'M8 Pro'
+    - regex: 'LEAGOO[- _](Z[156]|M8|T1)[);/ ]'
+      model: '$1'
     - regex: 'M5 EDGE'
       model: 'M5 Edge'
     - regex: 'LEAGOO[_ ]Lead([57])'
@@ -10434,11 +10436,13 @@ Safaricom:
 
 # Santin
 Santin:
-  regex: '(?:SANTIN|BiTBiZ_V58|ACTOMA ACE|DREAMPLUS03A)[);/_ ]'
+  regex: '(?:SANTIN|BiTBiZ_V58|ACTOMA ACE|DREAMPLUS03A|Candy U7 Pro)[);/_ ]'
   device: 'smartphone'
   models:
     - regex: 'BiTBiZ_V58[);/ ]'
       model: 'BiTBiZ V58'
+    - regex: 'Candy U7 Pro[);/ ]'
+      model: 'Candy U7 Pro'
     - regex: 'DREAMPLUS03A[);/ ]'
       model: 'Dream Plus 03A'
     - regex: 'GreenOrange[);/ ]'
@@ -13118,12 +13122,15 @@ Vernee:
 
 # Vertu
 Vertu:
-  regex: 'Vertu[ ]?([a-z0-9]+)|ASTER P[/;) ]'
+  regex: 'Vertu[ ]?([a-z0-9]+)|(?:ASTER P|CONSTELLATION X)[/;) ]'
   device: 'feature phone'
   models:
     - regex: 'ASTER P[/;) ]'
       device: 'smartphone'
       model: 'Aster P'
+    - regex: 'CONSTELLATION X[/;) ]'
+      device: 'smartphone'
+      model: 'Constellation X'
     - regex: 'Vernee[ _-]([a-z0-9_-]+)'
       model: '$1'
 
@@ -16647,3 +16654,27 @@ Hotwav:
   regex: '(Venus[_ ]X1[024569])[);/ ]'
   device: 'smartphone'
   model: '$1'
+
+# Tetratab
+Tetratab:
+  regex: 'CASEBOOK_3[);/ ]'
+  device: 'tablet'
+  model: 'Casebook 3'
+
+# Dolamee
+Dolamee:
+  regex: 'Dolamee[_ -](D[56])[);/ ]'
+  device: 'tv'
+  model: '$1'
+
+# INVIN
+Invin:
+  regex: 'INVIN[ _-](X2|KM6)[);/ ]'
+  device: 'tv'
+  model: '$1'
+
+# Doopro
+Doopro:
+  regex: 'Doopro P3[);/ ]'
+  device: 'smartphone'
+  model: 'P3'
