feat(device) detect new brand Nos models: Five, Novu, Novu II, Novu III, Neva 80, Roya feat(device) detect new brand Huawei model: MediaPad T2 10.0" Pro (605HW)
issue #6355

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9010,7 +9010,7 @@
   device:
     type: tablet
     brand: HU
-    model: MediaPad T2 10.0 Pro
+    model: MediaPad T2 10.0" Pro
   os_family: Android
   browser_family: Chrome
 - 
@@ -9030,7 +9030,7 @@
   device:
     type: tablet
     brand: HU
-    model: MediaPad T2 10.0 Pro
+    model: MediaPad T2 10.0" Pro
   os_family: Android
   browser_family: Chrome
 - 
@@ -9050,7 +9050,7 @@
   device:
     type: tablet
     brand: HU
-    model: MediaPad T2 10.0 Pro
+    model: MediaPad T2 10.0" Pro
   os_family: Android
   browser_family: Chrome
 - 
