feat(device) detect brand Invin model: X4
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16677,7 +16677,7 @@ Dolamee:
 
 # INVIN
 Invin:
-  regex: 'INVIN[ _-](X2|KM6)[);/ ]'
+  regex: 'INVIN[ _-](X[24]|KM6)[);/ ]'
   device: 'tv'
   model: '$1'
 
