--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -6515,3 +6515,23 @@
     model: Roya
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 9; INVIN_X4 Build/PPR1.181005.003; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/79.0.3945.93 Safari/537.36 OPR/46.0.2254.145391
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: 46.0.2254.145391
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: 4I
+    model: X4
+  os_family: Android
+  browser_family: Opera
