feat(device) detect new brand Accent model: Neon feat(device) detect brand Zen model: Admire Glam feat(device) detect brand Advan model: M4 feat(device) detect brand Archos model: 101B Helium 4G (AC101BHE) feat(device) detect brand Oysters model: 101B Helium Antarctic E
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -985,9 +985,11 @@ Acer:
 
 # Advan
 Advan:
-  regex: '(?:i7U|S45E|50[46]1|5059|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT|S5J\+)[);/ ]'
+  regex: '(?:ADVAN M4|i7U|S45E|50[46]1|5059|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT|S5J\+)[);/ ]'
   device: 'smartphone'
   models:
+    - regex: 'ADVAN M4'
+      model: 'M4'
     - regex: 'i7U'
       model: 'I Lite i7U'
     - regex: 'S5E[ _]NXT'
@@ -1686,7 +1688,7 @@ Ainol:
 
 # Archos
 Archos:
-  regex: '(?:YL-)?Archos|A50TI[);/ ]'
+  regex: '(?:YL-)?Archos|(?:A50TI|AC101BHE)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Archos (Oxygen 63)[);/ ]'
@@ -1696,6 +1698,9 @@ Archos:
     - regex: 'Archos ?5[);/ ]'
       device: 'tablet'
       model: '5'
+    - regex: 'AC101BHE[);/ ]'
+      device: 'tablet'
+      model: '101B Helium 4G'
     - regex: '(?:YL-)?Archos ([^/;]*(?:PAD)[^/;]*) Build'
       device: 'tablet'
       model: '$1'
@@ -10048,7 +10053,7 @@ Overmax:
 
 # Oysters
 Oysters:
-  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|T102MS_3G|T102ER3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_[34]G|IndianV|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G|T74Mai_3G|T104MBi_3G|T104SCi_3G|T104ER4G|Atlantic4G'
+  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|T102MS_3G|T102ER3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_[34]G|IndianV|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G|T74Mai_3G|T104MBi_3G|T104SCi_3G|T104ER4G|Atlantic4G|AntarcticE'
   device: 'tablet'
   models:
     - regex: 'Pacific[ ]?800i'
@@ -10057,6 +10062,9 @@ Oysters:
     - regex: 'Atlantic4G'
       device: 'smartphone'
       model: 'Atlantic 4G'
+    - regex: 'AntarcticE'
+      device: 'smartphone'
+      model: 'Antarctic E'
     - regex: 'IndianV'
       device: 'smartphone'
       model: 'Indian V'
@@ -15106,9 +15114,13 @@ Zuum:
 
 # Zen
 Zen:
-  regex: '(Admire[_ ][^/;]+|Cinemax[^/;)]+)(?:Build|\))'
+  regex: '(Admire[_ ][^/;]+|Cinemax[^/;)]+)(?:Build|\))|AdmireGlam'
   device: 'smartphone'
-  model: '$1'
+  models:
+    - regex: 'AdmireGlam[);/ ]'
+      model: 'Admire Glam'
+    - regex: '(Admire[_ ][^/;]+|Cinemax[^/;)]+)(?:Build|\))'
+      model: '$1'
 
 # Zync
 Zync:
@@ -16732,3 +16744,10 @@ Nos:
       model: 'Neva 80'
     - regex: 'NOS Roya[);/ ]'
       model: 'Roya'
+
+# ACCENT
+Accent:
+  regex: 'ACCENT_NEON[);/ ]'
+  device: 'smartphone'
+  model: 'Neon'
+
