feat(device) detect brand Huawei models: Y6 (2019) (MRD-LX1N)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6024,7 +6024,7 @@ Huawei:
       model: 'Y6 (2017)'
     - regex: 'ATU-L(?:11|21|22|X3)[);/ ]'
       model: 'Y6 (2018)'
-    - regex: 'MRD-L(?:X1[F]?|X3)[);/ ]'
+    - regex: 'MRD-L(?:X1[NF]?|X3)[);/ ]'
       model: 'Y6 (2019)'
     - regex: 'ATU-L(?:31|42)[);/ ]'
       model: 'Y6 Prime (2018)'
