feat(device) detect brand Aoson model: M707TG

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16635,7 +16635,7 @@ iDroid:
 
 # Aoson
 Aoson:
-  regex: 'aoson(?:R10[1-3]|S[78])(?:[_ ]?Pro)?[);/ ]'
+  regex: 'aoson(?:R10[1-3]|S[78]|M707TG)(?:[_ ]?Pro)?[);/ ]'
   device: 'tablet'
   models:
     - regex: 'aosonR10([1-3])[);/ ]'
@@ -16646,6 +16646,8 @@ Aoson:
       model: 'S7 7.0"'
     - regex: 'aosonS8Pro[);/ ]'
       model: 'S8 Pro 8.0"'
+    - regex: 'aoson(M707TG)[);/ ]'
+      model: '$1'
 
 # FireFly Mobile
 FireFly Mobile:
