feat(device) detect brand Wiko model: Tommy 3 (W_C200SN) feat(device) detect brand X-TIGI model: Photo P11 feat(device) detect brand Positivo BGH model: Ypy L1050E

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13493,7 +13493,7 @@ Wexler:
 
 # Wiko
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P200)|WC300|W-(V720|V800|P[36]11|K420|K510)-(TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-U300|U307AS|CINK PEAX 2'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P200|C200SN)|WC300|W-(V720|V800|P[36]11|K420|K510)-(TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-U300|U307AS|CINK PEAX 2'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?Cink Peax 2'
@@ -13586,7 +13586,7 @@ Wiko:
       model: 'Sunny 4 Plus'
     - regex: '(?:WIKO-)?Sunny'
       model: 'Sunny'
-    - regex: '(W_K600|Tommy3)'
+    - regex: '(?:W_K600|Tommy3|W_C200SN)'
       model: 'Tommy 3'
     - regex: '(?:WIKO-)?Tommy2 Plus'
       model: 'Tommy 2 Plus'
@@ -15273,6 +15273,8 @@ X-TIGI:
       device: 'tablet'
     - regex: 'X-TIGI[_ ]V28[_ ]LTE'
       model: 'V28 LTE'
+    - regex: 'X-TIGI[_ ]Photo[_ ]P11'
+      model: 'Photo P11'
     - regex: 'X[-_]TIGI[ _-]([^/;)]+) Build'
       model: '$1'
 
@@ -16147,7 +16149,7 @@ Multilaser:
 
 # Positivo BGH
 Positivo BGH:
-  regex: '(?:T1060B|S455|Positivo Twist|Twist (?:\(2018\)|2 (?:Fit|Pro)|Mini|Tab|Metal(?: 32GB)?|Max|XL|SE|[23SM]))[);/ ]'
+  regex: '(?:T1060B|S455|Positivo (?:Twist|Ypy)|Twist (?:\(2018\)|2 (?:Fit|Pro)|Mini|Tab|Metal(?: 32GB)?|Max|XL|SE|[23SM]))[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'S455[);/ ]'
@@ -16176,6 +16178,9 @@ Positivo BGH:
     - regex: 'T1060B[);/ ]'
       device: 'tablet'
       model: 'T1060B'
+    - regex: 'Positivo Ypy L1050E[);/ ]'
+      device: 'tablet'
+      model: 'Ypy L1050E'
     - regex: 'Twist Tab[);/ ]'
       device: 'tablet'
       model: 'Twist Tab'
