--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -7215,3 +7215,60 @@
     model: M707TG
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; X-TIGI_Photo P11) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.132 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 80.0.3987.132
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: XT
+    model: Photo P11
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.1.1; Positivo Ypy L1050E Build/JRO03H)
+  os:
+    name: Android
+    short_name: AND
+    version: 4.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 3P
+    model: Ypy L1050E
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: com.google.android.apps.searchlite/114914 (Linux; U; Android 8.1.0; it_IT; W_C200SN; Build/O11019; Cronet/74.0.3729.182)
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Google Go
+    version: ""
+  device:
+    type: smartphone
+    brand: WI
+    model: Tommy 3
+  os_family: Android
+  browser_family: Unknown
