feat(device) detect Samsung GALAXY Note 20 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11291,6 +11291,9 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?(?:SM-N980(?:F|F/DS))'
       model: 'GALAXY Note 20'
       device: 'phablet'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N981(?:B|B/DS|U|U1|W))'
+      model: 'GALAXY Note 20 5G'
+      device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?(?:SM-N985(?:F|F/DS))'
       model: 'GALAXY Note 20 Ultra'
       device: 'phablet'
